--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,8 @@
 ---
+import Logo from "../assets/logo.jpg";
+import Header from "../components/Header.astro";
+
+import "../globals.css";
 export interface Props {
 	title: string;
 }
@@ -10,27 +14,24 @@ const { title } = Astro.props;
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description">
+		<meta name="description" content="Astro description" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
 	<body>
-		<slot />
+		<!-- @ts-ignore -->
+		<Header
+			logoSrc={Logo}
+			logoHref="/"
+			logoAlt="Go to Home"
+			height={50}
+			logoTitle="ben9583"
+		>
+			<a href="/about">About</a>
+			<a href="/feedback">Submit Feedback</a>
+		</Header>
+		<div class="mt-16"><slot /></div>
 	</body>
 </html>
-<style is:global>
-	:root {
-		--accent: 124, 58, 237;
-		--accent-gradient: linear-gradient(45deg, rgb(var(--accent)), #da62c4 30%, white 60%);
-	}
-	html {
-		font-family: system-ui, sans-serif;
-		background-color: #F6F6F6;
-	}
-	code {
-		font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-			Bitstream Vera Sans Mono, Courier New, monospace;
-	}
-</style>
