create basic form

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import Layout from "../layouts/Layout.astro";
 			</h1>
 			<p class="text-lg">
 				There's nothing on this page. If you received a link to this page from
-				ben9583, there should be also be a code he included with the link.
+				Ben, there should be also be a code he included with the link.
 				Please go to the <a href="/feedback">feedback page</a> and enter the code
 				there.
 			</p>
