--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -21,7 +21,8 @@ import Layout from "../layouts/Layout.astro";
         my Raspberry Pi 4b with an <a href="https://astro.build">Astro</a> frontend
         and PostgreSQL backend. I don't have prior experience with Astro before this
         project, so this has been a nice way to get used to it. I'm also using
-        <a href="https://tailwindcss.com">Tailwind CSS</a> for styling.
+        <a href="https://tailwindcss.com">Tailwind CSS</a> for styling. Also, this
+        website has no JavaScript.
       </p>
       <p class="mb-4 text-lg">
         Looking for my main website? <a href="https://ben9583.com">Click here.</a>
