--- a/src/pages/feedback.astro
+++ b/src/pages/feedback.astro
@@ -115,7 +115,7 @@ if(data instanceof Response) {
 }
 ---
 
-<Layout title="Submit Feedback to ben9583">
+<Layout title="Submit Feedback to ben9583" description="Submit Feedback to ben9583 from the code you've received from him, and he'll read your feedback shortly.">
   <div class="max-w-xl mx-auto">
     <main class="main-content ml-4 mr-4 py-8 max-w-xl">
       <h1 class="text-3xl font-bold mb-8">Submit Feedback</h1>
