--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="ben9583's Feedback Site">
+<Layout title="ben9583's Feedback Site" description="Welcome to the feedback website for ben9583. If you've received a code to provide feedback to ben9583, you're in the right place.">
 	<div class="max-w-xl mx-auto">
 		<main class="main-content ml-4 mr-4 py-8 max-w-xl">
 			<h1 class="text-3xl font-bold mb-8">
