--- a/src/pages/thanks.astro
+++ b/src/pages/thanks.astro
@@ -2,7 +2,7 @@
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="ben9583's Feedback Site">
+<Layout title="Thanks for the Feedback" description="Thank you for your feedback. Ben appreciates hearing from you and will read your comments as quickly as he can.">
   <div class="max-w-xl mx-auto">
     <main class="main-content ml-4 mr-4 py-8 max-w-xl">
       <h1 class="text-3xl font-bold mb-8">Thanks.</h1>
