--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,18 +5,21 @@ import Header from "../components/Header.astro";
 import "../globals.css";
 export interface Props {
 	title: string;
+	description: string;
 }
 
-const { title } = Astro.props;
+const { title, description } = Astro.props;
 ---
 
 <!DOCTYPE html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
+		<meta name="author" content="ben9583" />
+		<meta name="description" content={description} />
+		<meta name="keywords" content="ben9583, feedback" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" href="/favicon.ico" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
