--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,8 +1,11 @@
 ---
-import Layout from "../layouts/Layout.astro";
+import Layout from '../layouts/Layout.astro'
 ---
 
-<Layout title="About ben9583's Feedback Site" description="Learn more about ben9583's feedback website, why it exists, and the technology behind it.">
+<Layout
+  title="About ben9583's Feedback Site"
+  description="Learn more about ben9583's feedback website, why it exists, and the technology behind it."
+>
   <div class="max-w-xl mx-auto">
     <main class="main-content ml-4 mr-4 py-8 max-w-xl">
       <h1 class="text-3xl font-bold mb-8">About</h1>
@@ -18,14 +21,17 @@ import Layout from "../layouts/Layout.astro";
       </p>
       <p class="mb-4 text-lg">
         If you're curious about what runs this website, it's currently hosted on
-        my Raspberry Pi 4b with an <a href="https://astro.build">Astro</a> frontend
-        and PostgreSQL backend. I don't have prior experience with Astro before this
-        project, so this has been a nice way to get used to it. I'm also using
-        <a href="https://tailwindcss.com">Tailwind CSS</a> for styling. Also, this
-        website has no JavaScript.
+        my Raspberry Pi 4b with an <a href="https://astro.build">Astro</a>
+         frontend and PostgreSQL backend. I don't have prior experience with
+        Astro before this project, so this has been a nice way to get used to
+        it. I'm also using
+        <a href="https://tailwindcss.com">Tailwind CSS</a> for styling. Also,
+        this website has no JavaScript.
       </p>
       <p class="mb-4 text-lg">
-        Looking for my main website? <a href="https://ben9583.com">Click here.</a>
+        Looking for my main website? <a href="https://ben9583.com"
+          >Click here.</a
+        >
       </p>
     </main>
   </div>
