--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,25 +1,27 @@
 ---
-import Layout from "../layouts/Layout.astro";
+import Layout from '../layouts/Layout.astro'
 ---
 
-<Layout title="ben9583's Feedback Site" description="Welcome to the feedback website for ben9583. If you've received a code to provide feedback to ben9583, you're in the right place.">
-	<div class="max-w-xl mx-auto">
-		<main class="main-content ml-4 mr-4 py-8 max-w-xl">
-			<h1 class="text-3xl font-bold mb-8">
-				Welcome to <span class="text-gradient">ben9583's feedback site.</span>
-			</h1>
-			<p class="text-lg">
-				There's nothing on this page. If you received a link to this page from
-				Ben, there should be also be a code he included with the link.
-				Please go to the <a href="/feedback">feedback page</a> and enter the code
-				there.
-			</p>
-		</main>
-	</div>
+<Layout
+  title="ben9583's Feedback Site"
+  description="Welcome to the feedback website for ben9583. If you've received a code to provide feedback to ben9583, you're in the right place."
+>
+  <div class="max-w-xl mx-auto">
+    <main class="main-content ml-4 mr-4 py-8 max-w-xl">
+      <h1 class="text-3xl font-bold mb-8">
+        Welcome to <span class="text-gradient">ben9583's feedback site.</span>
+      </h1>
+      <p class="text-lg">
+        There's nothing on this page. If you received a link to this page from
+        Ben, there should be also be a code he included with the link. Please go
+        to the <a href="/feedback">feedback page</a> and enter the code there.
+      </p>
+    </main>
+  </div>
 </Layout>
 
 <style>
-	.main-content {
-		width: calc(100% - 2rem);
-	}
+  .main-content {
+    width: calc(100% - 2rem);
+  }
 </style>
