--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,40 +1,40 @@
 ---
-import Logo from "../assets/logo.jpg";
-import Header from "../components/Header.astro";
+import Logo from '../assets/logo.jpg'
+import Header from '../components/Header.astro'
 
-import "../globals.css";
+import '../globals.css'
 export interface Props {
-	title: string;
-	description: string;
+  title: string
+  description: string
 }
 
-const { title, description } = Astro.props;
+const { title, description } = Astro.props
 ---
 
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="author" content="ben9583" />
-		<meta name="description" content={description} />
-		<meta name="keywords" content="ben9583, feedback" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" href="/favicon.ico" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
-	</head>
-	<body>
-		<!-- @ts-ignore -->
-		<Header
-			logoSrc={Logo}
-			logoHref="/"
-			logoAlt="Go to Home"
-			height={50}
-			logoTitle="ben9583"
-		>
-			<a href="/about">About</a>
-			<a href="/feedback">Submit Feedback</a>
-		</Header>
-		<div class="mt-16"><slot /></div>
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="author" content="ben9583" />
+    <meta name="description" content={description} />
+    <meta name="keywords" content="ben9583, feedback" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" href="/favicon.ico" />
+    <meta name="generator" content={Astro.generator} />
+    <title>{title}</title>
+  </head>
+  <body>
+    <!-- @ts-ignore -->
+    <Header
+      logoSrc={Logo}
+      logoHref="/"
+      logoAlt="Go to Home"
+      height={50}
+      logoTitle="ben9583"
+    >
+      <a href="/about">About</a>
+      <a href="/feedback">Submit Feedback</a>
+    </Header>
+    <div class="mt-16"><slot /></div>
+  </body>
 </html>
