--- a/src/pages/thanks.astro
+++ b/src/pages/thanks.astro
@@ -1,13 +1,17 @@
 ---
-import Layout from "../layouts/Layout.astro";
+import Layout from '../layouts/Layout.astro'
 ---
 
-<Layout title="Thanks for the Feedback" description="Thank you for your feedback. Ben appreciates hearing from you and will read your comments as quickly as he can.">
+<Layout
+  title="Thanks for the Feedback"
+  description="Thank you for your feedback. Ben appreciates hearing from you and will read your comments as quickly as he can."
+>
   <div class="max-w-xl mx-auto">
     <main class="main-content ml-4 mr-4 py-8 max-w-xl">
       <h1 class="text-3xl font-bold mb-8">Thanks.</h1>
       <p class="mb-4 text-lg">
-        Thank you for your feedback. Your response has been recorded and I will read it shortly. Your input is greatly appreciated.
+        Thank you for your feedback. Your response has been recorded and I will
+        read it shortly. Your input is greatly appreciated.
       </p>
     </main>
   </div>
