change around admin layout

--- a/src/pages/admin/index.astro
+++ b/src/pages/admin/index.astro
@@ -42,9 +42,8 @@ if (Astro.request.method === 'POST') {
               Here, you can view all submitted feedback, generate new codes, and
               manage existing codes.
             </p>
-            <ButtonLikeLink href="/admin/view-feedback">View feedback</ButtonLikeLink>
+            <ButtonLikeLink href="/admin/manage-feedback">Manage feedback</ButtonLikeLink>
             <ButtonLikeLink href="/admin/new-code">Create new code</ButtonLikeLink>
-            <ButtonLikeLink href="/admin/manage-codes">Manage existing codes</ButtonLikeLink>
           </>
         ) : (
           <>
