--- a/src/pages/feedback.astro
+++ b/src/pages/feedback.astro
@@ -168,7 +168,7 @@ if (Astro.request.method === 'POST') {
           </>
         )
       }
-      <p class="mt-4 text-red-500">{message}</p>
+      <p class="mt-4 text-lg text-red-500">{message}</p>
     </main>
   </div>
 </Layout>
