--- a/src/pages/admin/index.astro
+++ b/src/pages/admin/index.astro
@@ -2,29 +2,31 @@
 import Layout from '../../layouts/Layout.astro'
 import Input from '../../components/Input.astro'
 import ButtonLikeLink from '../../components/ButtonLikeLink.astro'
-import { adminAuthGuard, decodeLogin, encodeLogin } from '../../lib/auth'
+import adminIsAuthenticated, { adminAuthGuard, encodeLogin } from '../../lib/auth'
 
 let authenticated = false
+let message = ''
 
 const handleAdmin = (username: string, passkey: string) => {
   authenticated = true
-  Astro.cookies.set('token', encodeLogin(username, passkey), {
-    path: '/',
-    maxAge: 60 * 60 * 24 * 7,
-  })
+  Astro.cookies.set('token', encodeLogin(username, passkey))
 }
 
 if (Astro.request.method === 'POST') {
   const data = await Astro.request.formData()
-  const username1 = data.get('username')?.toString() ?? ""
-  const passkey1 = data.get('passkey')?.toString() ?? ""
-  if (adminAuthGuard(username1, passkey1))
-    handleAdmin(username1, passkey1)
-  
-  const [username2, passkey2] = decodeLogin(Astro.cookies.get('token')?.value ?? "")
-  if(adminAuthGuard(username2, passkey2))
-    handleAdmin(username2, passkey2)
+  const username = data.get('username')?.toString() ?? ""
+  const passkey = data.get('passkey')?.toString() ?? ""
+  if (adminAuthGuard(username, passkey))
+    handleAdmin(username, passkey)
+  else
+    message = 'Invalid username or passkey. Please try again.'
+} else {
+  authenticated = adminIsAuthenticated(Astro)
+}
 
+if(!authenticated) {
+  Astro.response.status = 401
+  Astro.response.headers.set('WWW-Authenticate', 'Basic realm="AdminAccess" charset="UTF-8"')
 }
 ---
 
@@ -89,6 +91,7 @@ if (Astro.request.method === 'POST') {
                 <Input type="submit" value="Submit" />
               </div>
             </form>
+            <p class="mt-4 text-lg text-red-500">{message}</p>
           </>
         )
       }
