--- a/src/pages/admin/new-code.astro
+++ b/src/pages/admin/new-code.astro
@@ -1,9 +1,9 @@
 ---
 import NotFound from '../../components/NotFound.astro';
 import Layout from '../../layouts/Layout.astro'
-import { adminAuthGuard, decodeLogin } from '../../lib/auth';
+import adminIsAuthenticated from '../../lib/auth';
 
-const authenticated = adminAuthGuard(...decodeLogin(Astro.cookies.get('token')?.value ?? ""));
+const authenticated = adminIsAuthenticated(Astro);
 ---
 
 { authenticated ? (
