some formatting fixes

--- a/src/components/NotFound.astro
+++ b/src/components/NotFound.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from "../layouts/Layout.astro";
+import Layout from '../layouts/Layout.astro'
 ---
 
 <Layout
@@ -8,9 +8,7 @@ import Layout from "../layouts/Layout.astro";
 >
   <div class="max-w-xl mx-auto">
     <main class="main-content ml-4 mr-4 py-8 max-w-xl">
-      <h1 class="text-3xl font-bold mb-8">
-        404 Page not found
-      </h1>
+      <h1 class="text-3xl font-bold mb-8">404 Page not found</h1>
       <p class="text-lg">
         There's nothing on this page. Please use one of the links on the navbar
         above to navigate to another page.
