--- a/src/404.astro
+++ b/src/404.astro
@@ -1,5 +1,5 @@
 ---
-import NotFound from "./components/NotFound.astro";
+import NotFound from './components/NotFound.astro'
 
 export const prerender = true
 ---
