--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -6,5 +6,5 @@ export type Props = HTMLAttributes<'button'>
 
 <button
   class="border border-gray-300 rounded-md px-4 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent m-1"
-  {...Astro.props}
-><slot /></button>
+  {...Astro.props}><slot /></button
+>
