--- a/src/components/ButtonLikeLink.astro
+++ b/src/components/ButtonLikeLink.astro
@@ -6,5 +6,5 @@ export type Props = HTMLAttributes<'a'>
 
 <a
   class="block border text-black hover:no-underline cursor-pointer border-gray-300 rounded-md px-4 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent m-1"
-  {...Astro.props}
-><slot /></a>
+  {...Astro.props}><slot /></a
+>
