--- a/src/pages/admin/new-code.astro
+++ b/src/pages/admin/new-code.astro
@@ -1,4 +1,5 @@
 ---
+import AuthProvider from '../../components/AuthProvider.astro';
 import NotFound from '../../components/NotFound.astro'
 import Layout from '../../layouts/Layout.astro'
 import adminIsAuthenticated from '../../lib/auth'
@@ -6,17 +7,13 @@ import adminIsAuthenticated from '../../lib/auth'
 const authenticated = adminIsAuthenticated(Astro)
 ---
 
-{
-  authenticated ? (
-    <Layout
-      title="Create New Code"
-      description="Create a new code for someone to provide you feedback."
-    >
-      <div class="max-w-xl mx-auto">
-        <main class="main-content ml-4 mr-4 py-8 max-w-xl"></main>
-      </div>
-    </Layout>
-  ) : (
-    <NotFound />
-  )
-}
+<AuthProvider authenticated>
+  <Layout
+    title="Create New Code"
+    description="Create a new code for someone to provide you feedback."
+  >
+    <div class="max-w-xl mx-auto">
+      <main class="main-content ml-4 mr-4 py-8 max-w-xl"></main>
+    </div>
+  </Layout>
+</AuthProvider>
