implement create new code

--- a/src/components/WarningBanner.astro
+++ b/src/components/WarningBanner.astro
@@ -2,27 +2,64 @@
 export interface Props {
   title: string
   description: string
+  status: "success" | "error"
 }
 
-const { title, description } = Astro.props
+const { title, description, status } = Astro.props
+const color = status === "success" ? "green" : "red"
 ---
 
 <div
-  class="flex items-center p-4 bg-red-50 border-red-500 border-2 border-solid z-50 rounded-xl w-[80%] mt-20 mx-auto"
+  class={"flex items-center p-4 border-2 border-solid z-50 rounded-xl w-[80%] mt-20 mx-auto " + color}
 >
-  <div class="flex items-center justify-center rounded-full text-red-500">
+  <div class="flex items-center justify-center rounded-full">
     <div class="w-7 h-7 mr-5">
       <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-        <path
-          fill="currentColor"
-          d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10 10-4.5 10-10S17.5 2 12 2zm0 18c-4.4 0-8-3.6-8-8s3.6-8 8-8 8 3.6 8 8-3.6 8-8 8z"
-        ></path>
-        <path fill="currentColor" d="M11 7h2v7h-2zm0 8h2v2h-2z"></path>
+        {
+          status === "success" ?
+          <>
+            <circle
+              cx="12"
+              cy="12"
+              r="9"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+              class="text-green-500"
+            ></circle>
+            <path
+              fill="currentColor"
+              d="M9.5 14.17L6.83 11.5l-1.42 1.41L9.5 17.5l8-8-1.42-1.41z"
+            ></path>
+            
+          </> : <>
+            <path
+              fill="currentColor"
+              d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10 10-4.5 10-10S17.5 2 12 2zm0 18c-4.4 0-8-3.6-8-8s3.6-8 8-8 8 3.6 8 8-3.6 8-8 8z"
+            ></path>
+            <path fill="currentColor" d="M11 7h2v7h-2zm0 8h2v2h-2z"></path>
+          </>
+        }
       </svg>
     </div>
   </div>
   <div>
-    <h2 class="m-0 font-bold text-2xl text-red-500 mb-1">{title}</h2>
-    <p class="m-0 font-light text-red-500">{description}</p>
+    <h2 class="m-0 font-bold text-2xl mb-1">{title}</h2>
+    <p class="m-0 font-light">{description}</p>
   </div>
 </div>
+
+<style>
+  .red {
+    background-color: rgb(254, 242, 242);
+    border-color: rgb(239, 68, 68);
+    color: rgb(239, 68, 68);
+  }
+
+  .green {
+    background-color: rgb(240, 253, 244);
+    border-color: rgb(34, 197, 94);
+    color: rgb(34, 197, 94);
+  }
+
+</style>
